--- a/src/_includes/index.njk
+++ b/src/_includes/index.njk
@@ -23,26 +23,24 @@
 <!-- LAMINA 2 -->
 <section class="w-full h-screen">
 	<main class="w-full h-full flex flex-col items-center justify-center gap-44">
-		<header class="relative w-full flex justify-center">
-			<aside class="absolute top-[1px] left-[90px]">
-				<div class="relative">
-					<aside class="absolute top-[-56px] right-[-28px]">
-						<img src="/images/perguntou.gif" width="152" height="152" alt="Já se perguntou?" />
-					</aside>
-					<article class="text-8xl flex flex-col gap-2.5">
-						<div class="playfair italic font-bold leading-[88px]">
-							<p>&nbsp;so</p>
-							<span class="flex items-start w-fit h-fit"
-								>think
-								<div class="border-[1px] border-black rounded-full px-2 py-0.5 mt-3 flex">
-									<span class="text-base">R</span>
-								</div>
-							</span>
-						</div>
-						<span class="text-base montserrat ml-6">marketing que pensa</span>
-					</article>
-				</div>
-			</aside>
+		<header class="w-full flex justify-center items-center gap-40 mr-60">
+			<div class="relative">
+				<aside class="absolute top-[-56px] right-[-28px]">
+					<img src="/images/perguntou.gif" width="152" height="152" alt="Já se perguntou?" />
+				</aside>
+				<article class="text-8xl flex flex-col gap-2.5">
+					<div class="playfair italic font-bold leading-[88px]">
+						<p>&nbsp;so</p>
+						<span class="flex items-start w-fit h-fit"
+							>think
+							<div class="border-[1px] border-black rounded-full px-2 py-0.5 mt-3 flex">
+								<span class="text-base">R</span>
+							</div>
+						</span>
+					</div>
+					<span class="text-base montserrat ml-6">marketing que pensa</span>
+				</article>
+			</div>
 			<span class="text-5xl font-bold leading-[62px]">
 				<p>Já se perguntou</p>
 				<p>do que Realmente</p>
@@ -55,10 +53,8 @@
 <!-- LAMINA 3 -->
 <section class="w-full h-screen">
 	<main class="w-full h-full flex flex-col justify-center items-center gap-40">
-		<header class="w-full flex items-center justify-center relative">
-			<aside class="absolute top-1/2 transform -translate-y-1/2 left-[100px]">
-				<img src="/images/stick-man.png" width="220" height="226" alt="O que fazer?" />
-			</aside>
+		<header class="w-full flex items-center justify-center gap-36 mr-60">
+			<img src="/images/stick-man.png" width="220" height="226" alt="O que fazer?" />
 			<article class="montserrat flex flex-col gap-6">
 				<p class="text-4xl font-bold leading-[52px]">Quais perguntas você tem feito<br />para melhorar sua empresa?</p>
 				<span class="text-3xl flex flex-col gap-2">
@@ -69,29 +65,27 @@
 				</span>
 			</article>
 		</header>
-		<footer class="w-full">
-			<main class="relative w-full flex items-center justify-center">
-				<aside class="absolute top-1/2 transform -translate-y-1/2 left-[100px]">
-					<div class="relative w-full">
-						<aside class="absolute top-[-68px] right-[-1px]">
-							<div class="max-w-[168px] z-0">
-								<img src="/images/procurando.gif" width="200" height="200" alt="Como?" />
-							</div>
-						</aside>
-						<article class="text-8xl flex flex-col gap-2.5 relative z-10">
-							<div class="playfair italic font-bold leading-[88px]">
-								<p>&nbsp;so</p>
-								<span class="flex items-start w-fit h-fit"
-									>think
-									<div class="border-[1px] border-black rounded-full px-2 py-0.5 mt-3 flex">
-										<span class="text-base">R</span>
-									</div>
-								</span>
-							</div>
-							<span class="text-base montserrat ml-6">marketing que pensa</span>
-						</article>
-					</div>
-				</aside>
+		<footer class="w-full mr-60">
+			<main class="w-full flex items-center justify-center gap-28">
+				<div class="relative">
+					<aside class="absolute top-[-68px] right-[-1px]">
+						<div class="max-w-[168px] z-0">
+							<img src="/images/procurando.gif" width="200" height="200" alt="Como?" />
+						</div>
+					</aside>
+					<article class="text-8xl flex flex-col gap-2.5 relative z-10">
+						<div class="playfair italic font-bold leading-[88px]">
+							<p>&nbsp;so</p>
+							<span class="flex items-start w-fit h-fit"
+								>think
+								<div class="border-[1px] border-black rounded-full px-2 py-0.5 mt-3 flex">
+									<span class="text-base">R</span>
+								</div>
+							</span>
+						</div>
+						<span class="text-base montserrat ml-6">marketing que pensa</span>
+					</article>
+				</div>
 				<span class="text-4xl leading-[52px]">
 					<p>Como melhorar o marketing da sua</p>
 					<p>empresa? Qual o planejamento para</p>
@@ -102,3 +96,81 @@
 	</main>
 </section>
 <!-- LAMINA 4 -->
+<section class="w-full h-screen py-24">
+	<main class="w-full h-full flex flex-col justify-between items-center">
+		<header class="w-full flex justify-center items-center gap-12">
+			<img src="/images/servicos.gif" width="250" height="152" alt="Já se perguntou?" />
+			<span class="text-2xl"
+				><span class="font-bold">Serviços |</span> Branding | Tráfego Pago | Conteúdo | Produção</span
+			>
+		</header>
+		<footer class="w-full flex justify-center items-center gap-32">
+			<div class="relative">
+				<aside class="absolute top-[-44px] right-[30px]">
+					<img src="/images/pensa.gif" width="70" height="152" alt="Já se perguntou?" />
+				</aside>
+				<article class="text-7xl flex flex-col gap-2.5">
+					<div class="playfair italic font-bold leading-[68px]">
+						<p>&nbsp;so</p>
+						<span class="flex items-start w-fit h-fit"
+							>think
+							<div class="border-[1px] border-black rounded-full px-1 mt-1 flex">
+								<span class="text-sm">R</span>
+							</div>
+						</span>
+					</div>
+					<span class="text-sm montserrat ml-4">marketing que pensa</span>
+				</article>
+			</div>
+			<span class="text-3xl leading-[52px]">
+				"Na Sothink, cada projeto começa com uma análise<br />
+				estratégica das áreas da empresa. A partir desse<br />
+				diagnóstico, oferecemos soluções personalizadas,<br />
+				alinhadas às necessidades específicas de cada cliente —<br />
+				afinal, cada negócio é único e vive realidades diferentes."
+			</span>
+		</footer>
+	</main>
+</section>
+<!-- LAMINA 5 -->
+<section class="w-full h-screen">
+	<main class="w-full h-full flex flex-col items-center justify-center gap-16">
+		<span class="text-6xl font-bold text-center lora leading-[64px]">
+			<p>“Funil de venda”</p>
+			<p>“Jornada do cliente”</p>
+			<p>“Experiência de marca”</p>
+			<p>“LTV - Lifetime Value”</p>
+			<p>“IAs para Empresas”</p>
+		</span>
+		<div class="text-5xl playfair italic font-bold leading-[44px] w-fit">
+			<p>&nbsp;so</p>
+			<span class="flex items-start w-fit h-fit">think </span>
+		</div>
+	</main>
+</section>
+<!-- LAMINA 6 -->
+<section class="w-full h-screen">
+	<main class="w-full h-full flex flex-col justify-center items-center gap-16">
+		<span class="athiti text-4xl">O que dizem nossos clientes</span>
+		<footer class="lora">
+			<div class="flex justify-center items-center gap-20 flex-wrap">
+				{% for cliente in clientes -%}
+				<article class="flex items-center gap-4 max-w-[364px]">
+					<img src="{{ cliente.image }}" width="204" height="100" alt="Cliente Sothink" />
+					<aside class="flex flex-col gap-2">
+						<div class="flex flex-col leading-[14px]">
+							<span class="text-lg font-bold">{{ cliente.name }}</span>
+							<span class="font-bold">{{ cliente.company }}</span>
+						</div>
+						<span class="text-sm leading-[20px]"
+							>{{ cliente.text }}</span
+						>
+					</aside>
+				</article>
+				{%- endfor %}
+			</div>
+			<div></div>
+		</footer>
+	</main>
+</section>
+<!-- LAMINA 7 -->
