menu text color

--- a/src/_includes/index.njk
+++ b/src/_includes/index.njk
@@ -162,15 +162,178 @@
 							<span class="text-lg font-bold">{{ cliente.name }}</span>
 							<span class="font-bold">{{ cliente.company }}</span>
 						</div>
-						<span class="text-sm leading-[20px]"
-							>{{ cliente.text }}</span
-						>
+						<span class="text-sm leading-[20px]">{{ cliente.text }}</span>
 					</aside>
 				</article>
 				{%- endfor %}
 			</div>
-			<div></div>
 		</footer>
 	</main>
 </section>
 <!-- LAMINA 7 -->
+<section class="w-full h-auto py-20 bg-black relative">
+	<aside class="bg-[#61047b] pt-1 pb-5 pr-6 pl-8 rounded-tr-2xl rounded-br-2xl absolute top-[40px] left-[0px]">
+		<div class="text-6xl text-white playfair italic font-bold leading-[52px] w-fit">
+			<p>&nbsp;so</p>
+			<span class="flex items-start w-fit h-fit"
+				>think
+				<div class="border-[1px] border-white rounded-full px-1 flex">
+					<span class="text-xs">R</span>
+				</div>
+			</span>
+		</div>
+	</aside>
+	<main class="w-full h-full flex flex-col gap-32 justify-center items-center">
+		<span class="athiti text-4xl text-white">Criação e produção de fotos e vídeos</span>
+		<section class="flex gap-14">
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+		</section>
+		<section class="flex gap-14 mt-28">
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+		</section>
+	</main>
+</section>
+<!-- LAMINA 8 -->
+<section class="w-full h-screen py-20 bg-black relative">
+	<aside class="bg-[#61047b] pt-1 pb-5 pr-6 pl-8 rounded-tr-2xl rounded-br-2xl absolute top-[40px] left-[0px]">
+		<div class="text-6xl text-white playfair italic font-bold leading-[52px] w-fit">
+			<p>&nbsp;so</p>
+			<span class="flex items-start w-fit h-fit"
+				>think
+				<div class="border-[1px] border-white rounded-full px-1 flex">
+					<span class="text-xs">R</span>
+				</div>
+			</span>
+		</div>
+	</aside>
+	<main class="w-full h-full flex flex-col gap-32 justify-center items-center">
+		<span class="athiti text-4xl text-white">Criação de campanhas</span>
+		<section class="flex gap-24">
+			<video class="max-w-[560px]" controls loop muted autoplay preload="metadata" width="557" height="314">
+				<source src="/videos/video.mp4" type="video/mp4" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[560px]" controls loop muted autoplay preload="metadata" width="557" height="314">
+				<source src="/videos/video.mp4" type="video/mp4" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+		</section>
+	</main>
+</section>
+<!-- LAMINA 9 -->
+<section class="w-full h-screen py-20 bg-black relative">
+	<aside class="bg-[#61047b] pt-1 pb-5 pr-6 pl-8 rounded-tr-2xl rounded-br-2xl absolute top-[40px] left-[0px]">
+		<div class="text-6xl text-white playfair italic font-bold leading-[52px] w-fit">
+			<p>&nbsp;so</p>
+			<span class="flex items-start w-fit h-fit"
+				>think
+				<div class="border-[1px] border-white rounded-full px-1 flex">
+					<span class="text-xs">R</span>
+				</div>
+			</span>
+		</div>
+	</aside>
+	<main class="w-full h-full flex flex-col gap-32 justify-center items-center">
+		<span class="athiti text-4xl text-white">Lançamentos</span>
+		<section class="flex gap-12">
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<video class="max-w-[250px]" controls loop muted autoplay preload="metadata" width="230" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+		</section>
+	</main>
+</section>
+<!-- LAMINA 10 -->
+<section class="w-full h-screen py-20 bg-black relative">
+	<aside class="bg-[#61047b] pt-1 pb-5 pr-6 pl-8 rounded-tr-2xl rounded-br-2xl absolute top-[40px] left-[0px]">
+		<div class="text-6xl text-white playfair italic font-bold leading-[52px] w-fit">
+			<p>&nbsp;so</p>
+			<span class="flex items-start w-fit h-fit"
+				>think
+				<div class="border-[1px] border-white rounded-full px-1 flex">
+					<span class="text-xs">R</span>
+				</div>
+			</span>
+		</div>
+	</aside>
+	<main class="w-full h-full flex flex-col gap-32 justify-center items-center">
+		<span class="athiti text-4xl text-white">Cobertura de Shows e Eventos</span>
+		<section class="w-full flex justify-center items-center gap-12">
+			<video class="max-w-[255px]" controls loop muted autoplay preload="metadata" width="255" height="407">
+				<source src="/videos/video.webm" type="video/webm" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+			<div class="w-full h-full bg-[#FF66C4] rounded-[30px] max-w-[358px] max-h-[228px]">
+				<span class="text-5xl font-bold text-center leading-[72px]">
+					<p>FILME</p>
+					<p>NATAL</p>
+					<p>SOLIDARIO</p>
+				</span>
+			</div>
+			<video class="max-w-[406px]" controls loop muted autoplay preload="metadata" width="406" height="314">
+				<source src="/videos/video.mp4" type="video/mp4" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+		</section>
+	</main>
+</section>
+<!-- LAMINA 11 -->
+ <section class="w-full h-screen py-20 relative">
+	<aside class="bg-[#61047b] pt-1 pb-5 pr-6 pl-8 rounded-tr-2xl rounded-br-2xl absolute top-[40px] left-[0px]">
+		<div class="text-6xl text-white playfair italic font-bold leading-[52px] w-fit">
+			<p>&nbsp;so</p>
+			<span class="flex items-start w-fit h-fit"
+				>think
+				<div class="border-[1px] border-white rounded-full px-1 flex">
+					<span class="text-xs">R</span>
+				</div>
+			</span>
+		</div>
+	</aside>
+	<main class="w-full h-full flex flex-col gap-32 justify-center items-center">
+		<span class="athiti text-4xl">Conteúdos Redes Sociais</span>
+		<section class="w-full flex justify-center items-center gap-24">
+			<img src="/images/feed-cast.png" width="284" height="100" />
+			<img src="/images/post-cast.png" width="344" height="100" />
+			<video class="max-w-[344px]" controls loop muted autoplay preload="metadata" width="344" height="472">
+				<source src="/videos/cast.mp4" type="video/mp4" />
+				Seu navegador não suporta reprodução de vídeo.
+			</video>
+		</section>
+	</main>
+</section>
+<!-- LAMINA 12 -->
