menu text color

--- a/src/_includes/index.njk
+++ b/src/_includes/index.njk
@@ -312,7 +312,7 @@
 	</main>
 </section>
 <!-- LAMINA 11 -->
- <section class="w-full h-screen py-20 relative">
+<section class="w-full h-screen py-20 relative">
 	<aside class="bg-[#61047b] pt-1 pb-5 pr-6 pl-8 rounded-tr-2xl rounded-br-2xl absolute top-[40px] left-[0px]">
 		<div class="text-6xl text-white playfair italic font-bold leading-[52px] w-fit">
 			<p>&nbsp;so</p>
@@ -337,3 +337,68 @@
 	</main>
 </section>
 <!-- LAMINA 12 -->
+<section class="w-full h-screen py-20 relative">
+	<aside class="bg-[#61047b] pt-1 pb-5 pr-6 pl-8 rounded-tr-2xl rounded-br-2xl absolute top-[40px] left-[0px]">
+		<div class="text-6xl text-white playfair italic font-bold leading-[52px] w-fit">
+			<p>&nbsp;so</p>
+			<span class="flex items-start w-fit h-fit"
+				>think
+				<div class="border-[1px] border-white rounded-full px-1 flex">
+					<span class="text-xs">R</span>
+				</div>
+			</span>
+		</div>
+	</aside>
+	<main class="w-full h-full flex flex-col gap-32 justify-center items-center">
+		<span class="athiti text-4xl">Criação de selos, logomarcas, identidades visuais e manuais</span>
+		<section class="w-full flex justify-center items-center gap-24">
+			<img src="/images/brand/bbj/1.png" class="max-w-[312px]" width="284" height="100" />
+			<img src="/images/brand/bbj/2.png" class="max-w-[240px]" width="344" height="100" />
+			<img src="/images/brand/bbj/3.png" class="max-w-[268px]" width="344" height="100" />
+		</section>
+	</main>
+</section>
+<!-- LAMINA 13 -->
+<section class="w-full h-screen py-20">
+	<main class="w-full h-full flex flex-col gap-8 justify-center items-center">
+		<section class="w-full flex justify-center items-center gap-20">
+			<img src="/images/brand/maeleoa/1.jpg" class="max-w-[314px]" width="500" height="100" />
+			<img src="/images/brand/maeleoa/2.png" class="max-w-[188px]" width="500" height="100" />
+			<img src="/images/brand/maeleoa/3.png" class="max-w-[184px]" width="500" height="100" />
+		</section>
+		<section class="w-full flex justify-center items-center gap-20">
+			<img src="/images/brand/maeleoa/4.jpg" class="max-w-[344px]" width="500" height="100" />
+			<img src="/images/brand/maeleoa/5.jpg" class="max-w-[246px]" width="500" height="100" />
+			<img src="/images/brand/maeleoa/6.jpg" class="max-w-[242px]" width="500" height="100" />
+		</section>
+	</main>
+</section>
+<!-- LAMINA 14 -->
+<section class="w-full h-screen py-20 px-36">
+	<main class="w-full h-full flex flex-col gap-12 justify-center items-center">
+		<section class="w-full flex justify-end items-center gap-8">
+			<img src="/images/brand/hortaly/1.png" class="max-w-[332px] max-h-[332px]" width="1000" height="100" />
+			<img src="/images/brand/hortaly/2.jpg" class="max-w-[714px]" width="1000" height="100" />
+		</section>
+		<section class="w-full flex justify-center items-center">
+			<div
+				class="bg-[url(/images/brand/hortaly/3.png)] max-w-[230px] w-full h-full bg-cover bg-center bg-no-repeat"
+			></div>
+			<div
+				class="bg-[url(/images/brand/hortaly/4.png)] max-w-[230px] w-full h-full bg-cover bg-center bg-no-repeat"
+			></div>
+			<div
+				class="bg-[url(/images/brand/hortaly/5.png)] max-w-[230px] w-full h-full bg-cover bg-center bg-no-repeat"
+			></div>
+			<img src="/images/brand/hortaly/6.png" class="max-w-[500px]" width="1000" height="100" />
+		</section>
+	</main>
+</section>
+<!-- LAMINA 15 -->
+<section class="w-full h-screen py-20 px-36">
+	<main class="w-full h-full flex gap-12 justify-center items-center">
+		<img src="/images/brand/tuali/1.png" class="max-w-[624px]" width="1000" height="100" />
+		<img src="/images/brand/tuali/2.png" class="max-w-[490px]" width="1000" height="100" />
+	</main>
+</section>
+<!-- LAMINA 16 -->
